remove codebase.min.js

--- a/public/plugins/test/crm.plugin.test.html
+++ b/public/plugins/test/crm.plugin.test.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-<div class="mrworking-crm-data" data-relation-name="dd" data-relation-id="444">  click </div>
+<div class="mrworking-crm-data" data-relation-name="dd" data-relation-id="444">  click  <div class="test"></div></div>
 </body>
 <script src="http://localhost:9003/plugins/crm/crm.plugin.js"></script>
 </html>
